apps/adguard/templates/ingress-auth-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-auth
  namespace: authentik
spec:
  rules:
    - host: adguard.mobrockers.com
      http:
        paths: 
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
  tls:
    - hosts:
        - adguard.mobrockers.com
